# discomfort.fm

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-run.sh
migrations/: 20240127164116_initial_create.sql  20240218184611_create-user-favorites.sql
src/: config.rs  database.rs  logger.rs  main.rs
src/discord/: data.rs  error.rs  mod.rs  utils.rs  voice.rs
src/discord/commands/: audio.rs  mod.rs
