[package]
name = "discomfort-fm"
version = "0.1.1"
edition = "2021"


[profile.release]
strip = true

[profile.dev.package.'*']
opt-level = 3


[dependencies]
chrono = "0.4.38"
directories = "5.0.1"
dotenvy = "0.15.7"
parking_lot = "0.12.3"
poise = "0.6.1"
reqwest = "0.11.26"
songbird = "0.4.3"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
symphonia = { version = "0.5.4", features = ["mp3"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
